Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-608

seg fault if attach is sent before open and begin

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.7
    • proton-0.8
    • proton-c
    • None

    Description

      While working with the proton-j engine, I inadvertently opened a link before opening the corresponding session and connection. This resulted in the attach being sent without the open or begin. Though clearly user error, it did show up an issue with the proton-c engine, where this sequence causes a segfault.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: