PROTON-608: Don't segfault if receive attach with no existing session.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1614045 13f79535-47bb-0310-9956-ffa450edef68